kubernetes/network-policy-demo-project/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: color-space
  

---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-space
  

---
apiVersion: v1
kind: Namespace
metadata:
  name: httpd-space
