kubernetes/network-policy-demo-project/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy
  namespace: color-space
spec:
  podSelector:
    matchLabels:
      app: colorapp
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: nginx-space
